# convex-optimization

./: README.md  pyproject.toml  requirements.txt
convex_optimization/examples/: linear_regression.py  logistic_regression.py  logistic_regression_gradient_descent.py  minimum_norm_problem.py  ridge_regression.py
